# Pluma

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  default_font.c  xmake.lua
.claude/agents/: plan-implementer.md
assets/lang/: en.xml  zh-CN.xml
scripts/: generate_embedded_languages.ps1
src/: app.cpp  app.h  config.cpp  config.h  font.cpp  font.h  http.cpp  http.h  java_finder.cpp  java_finder.h  main.cpp  mc_download.cpp  mc_download.h  mc_launch.cpp  mc_launch.h  mc_version.cpp  mc_version.h  sha1.cpp  sha1.h  ui.cpp  ui.h  util.cpp  util.h
src/config/: config.cpp  config.h
src/core/: event_queue.cpp  event_queue.h  sync.h  types.h
src/logic/: engine.cpp  engine.h
src/net/: download_manager.cpp  download_manager.h  hash.cpp  hash.h  http.cpp  http.h  launcher.cpp  launcher.h  manifest.cpp  manifest.h  mirror.cpp  mirror.h  msa.cpp  msa.h  types.h
src/platform/: file_dialog.cpp  file_dialog.h  game_monitor.cpp  game_monitor.h  java_locator.cpp  java_locator.h  process.cpp  process.h  system_fonts.cpp  system_fonts.h  win32_chrome.cpp  win32_chrome.h  window.cpp  window.h
src/render/: renderer.cpp  renderer.h
src/ui/: account_settings.cpp  account_settings.h  app_state.h  card.h  download_settings.cpp  download_settings.h  frame.cpp  frame.h  game_settings.cpp  game_settings.h  i18n.cpp  i18n.h  i18n_generated.cpp  i18n_generated.h  instance_settings.cpp  instance_settings.h  java_settings.cpp  java_settings.h  theme.cpp  theme.h
